init my change